force-app/main/default/objects/Contact/fields/Employment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Employment_Summary__c</fullName>
    <label>Employment Summary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>No Data</fullName>
            </value>
            <value>
                <fullName>Full-time</fullName>
            </value>
            <value>
                <fullName>Part-time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>