force-app/main/default/objects/Contact/fields/Engagement_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Application_Date__c</fullName>
    <formula>Most_Recent_Engagement__r.Date_of_Application__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement  Application Dates</label>
    <type>Date</type>
</CustomField>