force-app/main/default/objects/Contact/fields/Event_Group__c.field-meta.xml
<CustomField>
    <fullName>Event_Group__c</fullName>
    <label>Event Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>