force-app/main/default/objects/Contact/fields/External_Contacts_Donor_Prospect__c.field-meta.xml
<CustomField>
    <fullName>External_Contacts_Donor_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the contact categorized as Donors/Prospects in External Contacts?</description>
    <label>External Contacts Donor/Prospect</label>
    <type>Checkbox</type>
</CustomField>