force-app/main/default/objects/Contact/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <description>Undeleted the flag for the contact 6.23.15 LG</description>
    <formula>Account.Flag__c</formula>
    <label>Flag</label>
    <type>Text</type>
</CustomField>