force-app/main/default/objects/Contact/fields/Former_Name_Maiden__c.field-meta.xml
<CustomField>
    <fullName>Former_Name_Maiden__c</fullName>
    <label>Former Name (Maiden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>