force-app/main/default/objects/Contact/fields/Formula_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Formula_First_Name__c</fullName>
    <formula>IF(
				 Name_is_Preferred_Not_Legal__c ,  Legal_First_Name__c ,
				 FirstName 
				)</formula>
    <label>Finance System First Name</label>
    <type>Text</type>
</CustomField>