force-app/main/default/objects/Contact/fields/Formula_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Formula_Last_Name__c</fullName>
    <formula>IF(
				 Name_is_Preferred_Not_Legal__c ,  Legal_Last_Name__c , 
				LastName
				)</formula>
    <label>Finance System Last Name</label>
    <type>Text</type>
</CustomField>