force-app/main/default/objects/Contact/fields/Foster_Care_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Foster_Care_Involvement__c</fullName>
    <description>Used for metrics for Annie E Casey Foundation Grant</description>
    <label>Foster Care Involvement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Currently in care</fullName>
            </value>
            <value>
                <fullName>Kinship</fullName>
            </value>
            <value>
                <fullName>Was in care then adopted</fullName>
            </value>
            <value>
                <fullName>Aged out / emancipated from system</fullName>
            </value>
            <value>
                <fullName>History of temporary in care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>