force-app/main/default/objects/Contact/fields/Gala_Campaign_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Gala_Campaign_Member_ID__c</fullName>
    <description>Used for October 2015 Gala</description>
    <label>Gala Campaign Member ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>