force-app/main/default/objects/Contact/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
                <color>#FFCC33</color>
                <label>Female</label>
            </value>
            <value>
                <fullName>Male</fullName>
                <color>#78C953</color>
                <label>Male</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#666666</color>
                <label>Other</label>
            </value>
            <value>
                <fullName>I prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>