force-app/main/default/objects/Contact/fields/Gender_Other__c.field-meta.xml
<CustomField>
    <fullName>Gender_Other__c</fullName>
    <label>Gender - Other</label>
    <length>55</length>
    <type>Text</type>
</CustomField>