force-app/main/default/objects/Contact/fields/Generate_Password__c.field-meta.xml
<CustomField>
    <fullName>Generate_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by trigger to generate new password.</description>
    <label>Generate Password</label>
    <type>Checkbox</type>
</CustomField>