force-app/main/default/objects/Contact/fields/Gerald_VIP__c.field-meta.xml
<CustomField>
    <fullName>Gerald_VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IN DEVELOPMENT / proof-of-concept only --- flag certain contacts as Gerald VIPs and alert him when activities are logged.</description>
    <label>Gerald VIP</label>
    <type>Checkbox</type>
</CustomField>