force-app/main/default/objects/Contact/fields/Gift_Amount_Other_Organization__c.field-meta.xml
<CustomField>
    <fullName>Gift_Amount_Other_Organization__c</fullName>
    <inlineHelpText>Add the largest known gift amount donated to another organization</inlineHelpText>
    <label>Largest Gift Amount to Other Org</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>