force-app/main/default/objects/Contact/fields/Gift_Capacity_Range__c.field-meta.xml
<CustomField>
    <fullName>Gift_Capacity_Range__c</fullName>
    <description>Gift Capacity Range associated to the gift capacity rating, created by Travis Hodges Nov 2015</description>
    <inlineHelpText>When selecting the Gift Capacity Range, also select the Gift Capacity Rating</inlineHelpText>
    <label>Gift Capacity Range</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Gift_Capacity_Rating__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>$100,000,000+</fullName>
            </value>
            <value>
                <fullName>$50,000,000 - $99,999,999</fullName>
            </value>
            <value>
                <fullName>$10,000,000 - $49,999,999</fullName>
            </value>
            <value>
                <fullName>$5,000,000 - $9,999,999</fullName>
            </value>
            <value>
                <fullName>$1,000,000 - $4,999,999</fullName>
            </value>
            <value>
                <fullName>$500,000 - $999,999</fullName>
            </value>
            <value>
                <fullName>$250,000 - $499,999</fullName>
            </value>
            <value>
                <fullName>$100,000 - $249,999</fullName>
            </value>
            <value>
                <fullName>$50,000 - $99,999</fullName>
            </value>
            <value>
                <fullName>$25,000 - $49,999</fullName>
            </value>
            <value>
                <fullName>$15,000 - $24,999</fullName>
            </value>
            <value>
                <fullName>$10,000 - $14,999</fullName>
            </value>
            <value>
                <fullName>$5,000 - $9,999</fullName>
            </value>
            <value>
                <fullName>$2,500 - $4,999</fullName>
            </value>
            <value>
                <fullName>$1 - $2,499</fullName>
            </value>
            <value>
                <fullName>Unable to Rate</fullName>
            </value>
            <value>
                <fullName>$50 million+</fullName>
            </value>
            <value>
                <fullName>$25 million - $50 million</fullName>
            </value>
            <value>
                <fullName>$10 million - $25 million</fullName>
            </value>
            <value>
                <fullName>$5 million - $10 million</fullName>
            </value>
            <value>
                <fullName>$1 million - $5 million</fullName>
            </value>
            <value>
                <fullName>$500,000 - $1 million</fullName>
            </value>
            <value>
                <fullName>$250,000 - $500,000</fullName>
            </value>
            <value>
                <fullName>$100,000 - $250,000</fullName>
            </value>
            <value>
                <fullName>$50,000 - $100,000</fullName>
            </value>
            <value>
                <fullName>$25,000 - $50,000</fullName>
            </value>
            <value>
                <fullName>$10,000 - $25,000</fullName>
            </value>
            <value>
                <fullName>Under $10,000</fullName>
            </value>
            <value>
                <fullName>Reviewed, Not Rated</fullName>
            </value>
            <value>
                <fullName>$5MM+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>