force-app/main/default/objects/Contact/fields/Gift_Capacity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Gift_Capacity_Rating__c</fullName>
    <description>Gift Capacity Ratings from Travis Hodges Nov 2015</description>
    <inlineHelpText>Enter the gift capacity rating from 0 to 20 with 0 being unable to rate</inlineHelpText>
    <label>Gift Capacity Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A-DS</fullName>
            </value>
            <value>
                <fullName>B-DS</fullName>
            </value>
            <value>
                <fullName>C-DS</fullName>
            </value>
            <value>
                <fullName>D-DS</fullName>
            </value>
            <value>
                <fullName>E-DS</fullName>
            </value>
            <value>
                <fullName>F-DS</fullName>
            </value>
            <value>
                <fullName>G-DS</fullName>
            </value>
            <value>
                <fullName>H-DS</fullName>
            </value>
            <value>
                <fullName>I-DS</fullName>
            </value>
            <value>
                <fullName>J-DS</fullName>
            </value>
            <value>
                <fullName>K-DS</fullName>
            </value>
            <value>
                <fullName>L-DS</fullName>
            </value>
            <value>
                <fullName>M-DS</fullName>
            </value>
            <value>
                <fullName>N-DS</fullName>
            </value>
            <value>
                <fullName>O-DS</fullName>
            </value>
            <value>
                <fullName>X-DS</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>H</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>