force-app/main/default/objects/Contact/fields/GiftCapacityNote__c.field-meta.xml
<CustomField>
    <fullName>GiftCapacityNote__c</fullName>
    <description>The Gift Capacity Note field is used by the Prospect Research team to add any additional information that may have been determined through screening or in the process of determining the gift capacity.</description>
    <label>Gift Capacity Note</label>
    <type>TextArea</type>
</CustomField>