force-app/main/default/objects/Contact/fields/GiftCapacitySource__c.field-meta.xml
<CustomField>
    <fullName>GiftCapacitySource__c</fullName>
    <description>Gift Capacity Source details who conducted the capacity screening. This can be out internal research team or an outside vendor.</description>
    <label>Gift Capacity Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DonorSearch</fullName>
            </value>
            <value>
                <fullName>Year Up Prospect Research</fullName>
            </value>
            <value>
                <fullName>WealthEngine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>