force-app/main/default/objects/Contact/fields/Giving_Society_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Giving_Society_This_Year__c</fullName>
    <label>Giving Society This Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Member (1,000 - 4,999)</fullName>
            </value>
            <value>
                <fullName>2 Bronze (5,000 - 9,999)</fullName>
            </value>
            <value>
                <fullName>3 Silver (10,000 - 24,999)</fullName>
            </value>
            <value>
                <fullName>4 Gold (25,000 - 49,999)</fullName>
            </value>
            <value>
                <fullName>5 Platinum (50,000 - 99,999)</fullName>
            </value>
            <value>
                <fullName>6 Sapphire (100,000 - 249,000)</fullName>
            </value>
            <value>
                <fullName>7 Diamond (250,000+)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>