force-app/main/default/objects/Contact/fields/Grads_of_Life_Function__c.field-meta.xml
<CustomField>
    <fullName>Grads_of_Life_Function__c</fullName>
    <inlineHelpText>When you select contact role you can select what the contact is responsible for.</inlineHelpText>
    <label>Grads of Life Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Best Practice Provider</fullName>
            </value>
            <value>
                <fullName>Convening</fullName>
            </value>
            <value>
                <fullName>EMP Commitment</fullName>
            </value>
            <value>
                <fullName>EMP Inquires</fullName>
            </value>
            <value>
                <fullName>EMP Technical Assistance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner Directory</fullName>
            </value>
            <value>
                <fullName>ROI/Business Case</fullName>
            </value>
            <value>
                <fullName>Spokesperson</fullName>
            </value>
            <value>
                <fullName>Success Stories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>