force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Skills__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Skills__c</fullName>
    <inlineHelpText>Indicates which skills this Contact has. You can filter on skills when you look for volunteers for particular Jobs.</inlineHelpText>
    <label>Volunteer Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>General Tech/Computer Skills</fullName>
            </value>
            <value>
                <fullName>Mock-Interview Experience</fullName>
            </value>
            <value>
                <fullName>Navigation of Higher Ed Applications</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Public Speaking</fullName>
            </value>
            <value>
                <fullName>Resume/Cover Letter Writing</fullName>
            </value>
            <value>
                <fullName>Teaching/Tutoring Experience</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Business Analysis &amp; Fundamentals</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Cyber Security</fullName>
            </value>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>IT Support</fullName>
            </value>
            <value>
                <fullName>Software Development</fullName>
            </value>
            <value>
                <fullName>Investment Operations</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>