force-app/main/default/objects/Contact/fields/hasBeenAssignedToSite__c.field-meta.xml
<CustomField>
    <fullName>hasBeenAssignedToSite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasBeenAssignedToSite</label>
    <type>Checkbox</type>
</CustomField>