force-app/main/default/objects/Contact/fields/High_School_or_GED__c.field-meta.xml
<CustomField>
    <fullName>High_School_or_GED__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if there is a High School of GED</inlineHelpText>
    <label>High School or GED</label>
    <type>Checkbox</type>
</CustomField>