force-app/main/default/objects/Contact/fields/Higher_Ed_Summary__c.field-meta.xml
<CustomField>
    <fullName>Higher_Ed_Summary__c</fullName>
    <label>Higher Ed Summary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>Not in school</fullName>
            </value>
            <value>
                <fullName>No data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>