force-app/main/default/objects/Contact/fields/Household_Address__c.field-meta.xml
<CustomField>
    <fullName>Household_Address__c</fullName>
    <formula>HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N500000000UFT&amp;eid=&quot;&amp;Id&amp;&quot;&amp;direction=toHousehold&quot;, IMAGE( &quot;servlet/servlet.FileDownload?file=01550000000Jh7K&quot;, &quot;image from Documents tab&quot;))  &amp;  HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N500000000UFT&amp;eid=&quot;&amp;Id&amp;&quot;&amp;direction=toContact&quot;, IMAGE( &quot;servlet/servlet.FileDownload?file=01550000000Jh6y&quot;, &quot;image from Documents tab&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household Address</label>
    <type>Text</type>
</CustomField>