force-app/main/default/objects/Contact/fields/Household_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Household_Mailing_Address__c</fullName>
    <description>This field is used for Tax letter and devo reporting.</description>
    <formula>IF(
  		TEXT(Account.Preferred_Mailing_Address__c) = &apos;Work&apos;,
    Account.npo02__Formal_Greeting__c + BR()+
				npsp__Primary_Affiliation__r.Name + BR()+
				npo02__Formula_HouseholdMailingAddress__c ,
				Account.npo02__Formal_Greeting__c + BR()+
				npo02__Formula_HouseholdMailingAddress__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Household Mailing Address</label>
    <type>Text</type>
</CustomField>