force-app/main/default/objects/Contact/fields/HS_or_GED__c.field-meta.xml
<CustomField>
    <fullName>HS_or_GED__c</fullName>
    <label>HS or GED</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High School Diploma</fullName>
            </value>
            <value>
                <fullName>GED Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>