force-app/main/default/objects/Contact/fields/ID_Contact_18_digit__c.field-meta.xml
<CustomField>
    <fullName>ID_Contact_18_digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID - Contact (18 digit)</label>
    <type>Text</type>
</CustomField>