force-app/main/default/objects/Contact/fields/IES_RCT_Group__c.field-meta.xml
<CustomField>
    <fullName>IES_RCT_Group__c</fullName>
    <description>For Research and Evaluation team, conducting mini-experiment at some sites and random control trials at others in order to track control group members</description>
    <inlineHelpText>Used to track control group members at participating sites</inlineHelpText>
    <label>IES RCT Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IES RCT - Control</fullName>
            </value>
            <value>
                <fullName>IES RCT - Treatment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>