force-app/main/default/objects/Contact/fields/If_Race_is_other_specify__c.field-meta.xml
<CustomField>
    <fullName>If_Race_is_other_specify__c</fullName>
    <label>If Race is other, specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>