force-app/main/default/objects/Contact/fields/Inclination_to_Give_Rating__c.field-meta.xml
<CustomField>
    <fullName>Inclination_to_Give_Rating__c</fullName>
    <description>Add the inclination to give rating</description>
    <inlineHelpText>Inclination to give rating tells us their likelihood to give to Year Up</inlineHelpText>
    <label>Inclination to Give - Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>