force-app/main/default/objects/Contact/fields/Informal_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Informal_Nickname__c</fullName>
    <description>Informal name of contact that they may go by; e.g. - Bill, Bob, Dick</description>
    <inlineHelpText>Informal name of contact that they may go by; e.g. - Bill, Bob, Dick</inlineHelpText>
    <label>Informal/Nickname</label>
    <length>40</length>
    <type>Text</type>
</CustomField>