force-app/main/default/objects/Contact/fields/Information_Session_Attended__c.field-meta.xml
<CustomField>
    <fullName>Information_Session_Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Box is checked if user attended</inlineHelpText>
    <label>Information Session Attended</label>
    <type>Checkbox</type>
</CustomField>